# osl_mb_foils

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: pr_agent.yml
notebooks/playground/: 0.1-lg-data-exploration.ipynb  0.2-lg-1d-efficiency.ipynb  0.3-lg-1d-efficiency.ipynb  0.4-lg-1d-efficiency_10mm.ipynb  0.5-lg-1d-efficiency_10mm.ipynb  0.6-lg-2d-efficiency_10mm.ipynb  0.6-lg-convert-ebt.ipynb  0.7-lg-ebt3-calibration.ipynb  0.9-lg-2d-profiles_with_EBT_efficiency.ipynb
notebooks/playground/2024-march/: 0.1-lg-mb-foils-inspect-raw-data.ipynb  0.2-lg-mb-foils-inspect-raw.ipynb  0.3-lg-mb-foils-efficiency.ipynb
notebooks/pub_materials_2024/: 0.2-lg-mb-foils-efficiency.ipynb  0.2-lg-radial_profile_and_ebts.ipynb
src/data/: analysis.py  detector.py  paths.py
src/visualise/: plot.py  settings.py
