[tool.poetry]
name = "osl-mb-foils"
version = "0.1.0"
description = "Data analysis of OSL MB foils"
authors = ["Leszek Grzanka <leszek.grzanka@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
pandas = "^2.2.0"
matplotlib = "^3.8.3"
seaborn = "^0.13.2"
scipy = "^1.12.0"
opencv-contrib-python-headless = "^4.9.0.80"
tables = "^3.9.2"
openpyxl = "^3.1.2"
lmfit = "^1.3.1"
tifffile = {extras = ["all"], version = "^2024.5.22"}
tqdm = "^4.67.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.2"
yapf = "^0.40.2"
ipykernel = "^6.29.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
