[tool.poetry]
name = "osl-mb-foils"
version = "0.1.0"
description = "Data analysis of OSL MB foils"
authors = ["Leszek Grzanka <leszek.grzanka@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
pandas = "^2.2.3"
matplotlib = "^3.10.1"
seaborn = "^0.13.2"
scipy = "^1.15.2"
opencv-contrib-python-headless = "^4.9.0.80"
tables = "^3.10.2"
openpyxl = "^3.1.2"
lmfit = "^1.3.3"
tifffile = {extras = ["all"], version = "^2024.5.22"}
tqdm = "^4.67.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
yapf = "^0.40.2"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
